# jdex-cli

./: LICENSE  README.md  pyproject.toml
src/jdex_cli/: cli.py  jdex_toml.py
