[tool.poetry]
name = "jdex-cli"
version = "0.1.0"
description = "A command-line interface for managing your on-disk Johnny Decimal system."
authors = ["Secret SWE <secretswe@proton.me>"]
readme = "README.md"
packages = [{include = "jdex_cli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
click = "^8.1.7"
tomlkit = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jdex = "jdex_cli.cli:cli"
